[package]
name = "beaver"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.10"
byteorder = "1.4.3"
enum-map = "2.6.0"
indicatif = { version = "0.17.5", features = ["rayon"] }
itertools = "0.11.0"
rayon = "1.7.0"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
ureq = "2.7.1"
