[package]
name = "beaver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
argh = "0.1.10"
array-init = "2.1.0"
binrw = "0.11.2"
bitvec = "1.0.1"
bumpalo = "3.13.0"
byteorder = "1.4.3"
enum-map = "2.6.0"
indicatif = { version = "0.17.5", features = ["rayon"] }
itertools = "0.11.0"
memmap2 = "0.7.1"
ndarray = "0.15.6"
rayon = "1.7.0"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
ureq = "2.7.1"

[profile.release]
debug = true
